# MATIX

./: .gitignore  CLAUDE.md  README.md  oye_matix.onnx  railway.json
.github/workflows/: keepalive.yml  release.yml
agente_pc/: .env.example  README.md  pyproject.toml
agente_pc/agente_pc/: __init__.py  __main__.py  acciones.py  apps.py  audio.py  auditoria.py  autotest.py  capacidades.py  cliente.py  config.py  daemon.py  pantalla.py  registro.py  seguridad.py  tareas.py
agente_pc/scripts/: arrancar.py  desinstalar_autostart.ps1  instalar_autostart.ps1  instalar_vigilante.ps1  test_e2e.py  vigilar_agente.ps1
agente_pc/tests/: conftest.py  test_acciones.py  test_apps.py  test_audio.py  test_autotest.py  test_capacidades.py  test_cliente_reconexion.py  test_daemon_chequeos.py  test_lectura.py  test_organizacion.py  test_pantalla.py  test_registro.py  test_seguridad.py  test_tareas.py
app/: README.md  pubspec.yaml
app/android/: settings.gradle.kts
app/lib/: config.dart  main.dart
app/test/: widget_test.dart
cerebro/: .dockerignore  .env.example  .env.test.example  Dockerfile  README.md  pyproject.toml
cerebro/app/: config.py  db.py  main.py  security.py
cerebro/app/agente/: __init__.py  canal.py
cerebro/app/briefing/: __init__.py  armar.py  cierre.py  repaso_semanal.py
cerebro/app/comandos/: __init__.py  eventos.py  http.py  planificador.py  proyectos.py  recurrencia.py  registro.py  tareas.py  universidad.py
cerebro/app/google/: calendar.py  oauth.py
cerebro/app/matix/: arbol_proyecto.py  asistencia_eventos.py  automatizaciones.py  avance.py  backup.py  biblioteca.py  busqueda_web.py  capacidades_pc.py  chat.py  clasificador_rapido.py  contexto.py  control_pantalla.py  costos.py  creacion_proyecto.py  digitalizacion.py  enrutador.py  estado.py  evolucion_proyecto.py  extraccion_documentos.py  fechas_es.py  finanzas.py  horario.py  idempotencia.py  importar_plan.py  indexador.py  intake_analitico.py  llm.py  memoria.py  memoria_conversacional.py  modelos_llm.py  modos.py  muestras_voz.py  notis_programadas.py  perfil_proyecto.py  planificador_diario.py  proactividad.py  push_fcm.py  recordatorios.py  recuerdos.py  rendicion_cuentas.py  (+8 more)
cerebro/app/matix/modos/: estudio.md  finanzas.md  motivacion.md  tesis.md
cerebro/app/routers/: agente.py  apuntes.py  briefing.py  categorias.py  cierres_dia.py  cuadernos.py  cursos.py  evaluaciones.py  eventos.py  google.py  horario.py  material.py  matix.py  memoria.py  modelos.py  modos.py  movimientos.py  nudges.py  proactividad.py  profile.py  proyectos.py  push.py  rituales.py  rollover.py  sesiones_clase.py  spotify.py  subtareas.py  tareas.py  tracks.py  version.py
cerebro/app/schemas/: apuntes.py  briefing.py  categorias.py  cierres_dia.py  cuadernos.py  cursos.py  evaluaciones.py  eventos.py  google.py  horario.py  material.py  matix.py  memoria.py  modelos.py  modos.py  movimientos.py  nudges.py  proactividad.py  profile.py  proyectos.py  push.py  rituales.py  sesiones_clase.py  subtareas.py  tareas.py  tracks.py  version.py
cerebro/app/vision/: __init__.py  ocr.py  storage.py
cerebro/biblioteca/INGLES/: bloque_4_placeholder.md  bloque_4_puente_a2_a_b1.md
cerebro/scripts/: README_ingestar_documentos.md  aplicar_migraciones.py  backfill_recuerdos.py  embed_apuntes.py  embed_historial.py  ingestar_documentos.py  seed_demo.py  seed_demo_v2.py  seed_proyectos.py
cerebro/tests/: conftest.py  test_accion_diag_ping.py  test_agente_acciones.py  test_agente_canal.py  test_apuntes.py  test_apuntes_desde_foto.py  test_apuntes_reflote.py  test_arbol_proyecto.py  test_asistencia_eventos.py  test_audit_determinista.py  test_auto_conciencia.py  test_automatizaciones.py  test_avance.py  test_briefing.py  test_busqueda_web.py  test_capacidades_pc.py  test_captura_apunte.py  test_categorias.py  test_chat_imagen.py  test_chat_modelo.py  test_chat_optimizaciones.py  test_chat_personalidad.py  test_cierre.py  test_cierres_dia.py  test_clasificador_rapido.py  test_clasificar_captura.py  test_comandos_eventos.py  test_comandos_planificador.py  test_comandos_proyectos.py  test_comandos_tareas.py  test_comandos_universidad.py  test_consultar_hub.py  test_control_pantalla.py  test_creacion_proyecto.py  test_cuadernos.py  test_cursos.py  test_desglosar_tarea.py  test_digitalizacion.py  test_dispositivo.py  test_ejecutar_tool_errores.py  (+80 more)
docs/: CHECKLIST_1.0.md  CHECKLIST_2.0.md  Capa6_Agente_PC.md  Capa_1.5.md  Como_correr_Matix_desde_cero.md  ESTADO.md  Mapa_del_Hub.md  Matix_2.0_Norte_Capa_de_Comandos.md  Matix_Capacidades_y_Cambios.md  Matix_Contexto_del_Proyecto.md  Matix_Documento_Maestro_del_Usuario.md  Matix_Estado_del_Proyecto.md  Operacion.md  Plan_Capa1.md  Plan_Capa2.md  Plan_Capa3.md  Plan_Capa4.md  Plan_Capa7.md  Plan_Capa8.md  REVISION_PENDIENTE.md  Rendicion_Cuentas.md  SETUP_DESPLIEGUE.md  SETUP_DISTRIBUCION.md  SETUP_GOOGLE.md  entrenar_oye_matix.md  oye_matix_colab.ipynb  oye_matix_mi_voz.ipynb
mockups/: .thumbnail  Ajustes.html  Apuntes.html  Busqueda.html  Calendario Dia.html  Calendario Semana.html  Calendario.html  Detalle Curso.html  Detalle Evento.html  Detalle Nota.html  Detalle Proyecto.html  Detalle Tarea.html  Estado Vacio.html  Filtros.html  Inicio.html  Matix Chat.html  Matix Escuchando.html  Menu Adjuntar.html  Modal Borrar.html  Notificaciones.html  Nueva Nota.html  Nueva Tarea.html  Nuevo Curso.html  Nuevo Evento.html  Nuevo Proyecto.html  Proyectos.html  Selector Fecha.html  Tareas.html  Universidad.html  ajustes.jsx  apuntes.jsx  busqueda.jsx  calendario-dia.jsx  calendario-semana.jsx  calendario.jsx  detalle-curso.jsx  detalle-evento.jsx  detalle-nota.jsx  detalle-proyecto.jsx  detalle-tarea.jsx  (+18 more)
supabase/migrations/: 0001_initial_schema.sql  0002_proyectos.sql  0003_cierres_dia.sql  0004_papelera.sql  0005_apuntes_rag.sql  0006_app_versions.sql  0007_google_oauth.sql  0008_eventos_bidireccional.sql  0010_eventos_recurrencia.sql  (+39 more)
tools/: .env.prod.local.example  _subir_secreto.py  aplicar-migracion.sh  instalar-prod.ps1  keepalive.sh  spotify_autorizar.py  spotify_autorizar_auto.py
(+359 files in other folders)
