[project]
name = "matix-agente-pc"
version = "0.1.0"
description = "Agente local de Matix (Capa 6) — daemon que corre en la PC del usuario"
requires-python = ">=3.12"
dependencies = [
    # Cliente WebSocket asyncio (API nueva en websockets>=14). El agente abre
    # una conexión SALIENTE persistente al cerebro; nunca abre puertos.
    "websockets>=14",
    # Config desde agente_pc/.env (GITIGNORED).
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    # Capacidad crear_documento_word: genera .docx REALES (título/párrafos/tablas)
    # sin tocar la GUI de Word. Liviano y puro Python.
    "python-docx>=1.1",
    # Verificación HONESTA de reproducción (audio.py): peak de audio del proceso
    # Spotify (pycaw/Core Audio) + título de ventana (psutil + ctypes). Solo
    # Windows: en Linux/CI el marker los omite y audio.py degrada a «no medible».
    "pycaw>=20240210; sys_platform == 'win32'",
    "psutil>=5.9; sys_platform == 'win32'",
]

# Fase 6.3 — control de pantalla. Opcional: solo se necesita si activas
# AGENTE_PC_CONTROL_PANTALLA=1. Instálalo con `uv sync --extra control`.
# pyautogui mueve mouse/teclado; la CAPTURA la hace pyscreeze→Pillow. Pillow va
# EXPLÍCITO: pyscreeze no lo declara como dependencia dura, así que sin esta
# línea `screenshot()` reventaba con «unable to import pyscreeze (Pillow)».
# Lazy-import en pantalla.py: sin esto, los demás módulos y los tests funcionan.
[project.optional-dependencies]
control = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

# El agente es una aplicación, no un paquete publicable (igual que el cerebro).
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
# Añade la raíz del agente al path para importar el paquete `agente_pc` sin
# instalarlo (uv package=false).
pythonpath = ["."]
testpaths = ["tests"]
