[project]
name = "matix-cerebro"
version = "0.1.0"
description = "Cerebro de Matix — API FastAPI que conecta la app con Supabase"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # LLM provider (Capa 2). Aislado en cerebro/app/matix/llm.py —
    # ningún otro módulo importa openai.
    "openai>=1.50",
    # Multipart/form-data parser que FastAPI necesita para recibir
    # archivos en `/matix/transcribir` (Capa 2 Paso 3).
    "python-multipart>=0.0.18",
    # Rate limiting básico (Capa 2 Despliegue). Limita por IP.
    "slowapi>=0.1.9",
    # Google OAuth + APIs (Capa 4 Paso 1). google-auth maneja la
    # negociación OAuth; google-api-python-client tiene el cliente
    # del Calendar API que usamos para listar eventos.
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    # Push (FCM · Push Capa 1). firebase-admin manda los mensajes a los
    # tokens de dispositivo. Se configura con el service account de
    # Firebase vía FIREBASE_SERVICE_ACCOUNT_JSON.
    "firebase-admin>=6.5",
    # Scheduler de recordatorios por push (Push Capa 2): un job cada minuto
    # dentro del proceso de FastAPI (AsyncIOScheduler).
    "apscheduler>=3.10,<4",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

# El cerebro es una aplicación, no un paquete publicable. Decirle a
# uv que NO trate `app/` como una distribución a buildear evita que
# falle en `uv sync` por falta de `[build-system]`. Importa para el
# build de Railway: con `package = true` (el default), uv intenta
# instalar el local project y necesita un backend de build.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
